tests/baselines/reference/ambientExternalModuleWithoutInternalImportDeclaration.errors.txt
ambientExternalModuleWithoutInternalImportDeclaration_0.ts(2,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== ambientExternalModuleWithoutInternalImportDeclaration_1.ts (0 errors) ====
    ///<reference path='ambientExternalModuleWithoutInternalImportDeclaration_0.ts'/>
    import A = require('M');
    var c = new A();
==== ambientExternalModuleWithoutInternalImportDeclaration_0.ts (1 errors) ====
    declare module 'M' {
        module C {
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var f: number;
        }
        class C {
            foo(): void;
        }
        export = C;
    
    }
    